<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Horoscope</string>
    <string name="action_settings">Settings</string>
    <string name="Aries">Aries</string>
    <string name="Taurus">Taurus</string>
    <string name="Gemini">Gemini</string>
    <string name="Cancer">Cancer</string>
    <string name="Leo">Leo</string>
    <string name="Virgo">Virgo</string>
    <string name="Libra">Libra</string>
    <string name="Scorpio">Scorpio</string>
    <string name="Sagittarius">Sagittarius</string>
    <string name="Capricorn">Capricorn</string>
    <string name="Aquarius">Aquarius</string>
    <string name="Pisces">Pisces</string>

</resources>
