<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity"
    android:layout_gravity="center"
    android:columnCount="3"
    android:orientation="horizontal"
    tools:context=".MyActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageButton
            android:id="@+id/aries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/aries"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Aries" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="21 Mar - 19 Apr"
            android:textSize="8sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageButton
            android:id="@+id/taurus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/taurus"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Taurus" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="20 Apr - 20 May"
            android:textSize="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageButton
            android:id="@+id/gemini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gemini"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Gemini" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="21 May - 21 Jun"
            android:textSize="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageButton
            android:id="@+id/cancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cancer"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Cancer" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="22 Jun - 23 Jul"
            android:textSize="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageButton
            android:id="@+id/leo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/leo"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Leo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="24 Jul - 23 Aug"
            android:textSize="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageButton
            android:id="@+id/virgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/virgo"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Virgo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="24 Aug - 22 Sept"
            android:textSize="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageButton
            android:id="@+id/libra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/libra"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Libra" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="23 Sept - 22 Oct"
            android:textSize="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageButton
            android:id="@+id/scorpio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/scorpio"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Scorpio" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="23 Oct - 22 Nov"
            android:textSize="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageButton
            android:id="@+id/sagittarius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sagittarius"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Sagittarius" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="23 Nov - 20 Dec"
            android:textSize="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageButton
            android:id="@+id/capricorn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/capricorn"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/Capricorn" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="22 Dec - 20 Jan"
            android:textSize="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">
        <ImageButton
            android:id="@+id/aquarius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/aquarius"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Aquarius" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="21 Jan - 19 Feb"
            android:textSize="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <ImageButton
            android:layout_gravity="center"
            android:id="@+id/pisces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pisces" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Pisces" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="20 Feb - 20 Mar"
            android:textSize="8dp"/>
    </LinearLayout>


</GridLayout>
